Fixed blurry images on the website

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,6 +31,13 @@
     transform: translateZ();
   }
 
+  .pixelated {
+    image-rendering: pixelated;      
+    image-rendering: crisp-edges;   
+    
+    -ms-interpolation-mode: nearest-neighbor; 
+  }
+
   .text-gradient {
     @apply bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 via-purple-400 to-pink-400;
   }
